--- a/app/index dev.html
+++ b/app/index dev.html
@@ -34,7 +34,7 @@
 
   <!-- build:css assets/css/vendors.min.css -->
   <link href="/bower_components/material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet" />
-  <link href="/bower_components/c3/c3.css" rel="stylesheet" />
+  
   <link href="/bower_components/bower-jvectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet" />
   <link href="/bower_components/angular-loading-bar/build/loading-bar.css" rel="stylesheet" />
   <link href="/bower_components/angular-motion/dist/angular-motion.css" rel="stylesheet" />
@@ -64,15 +64,6 @@
       <div class="main-content" autoscroll="true" ng-cloak ng-view bs-affix-target></div>
     </div>
   </main>
-
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-62479268-1', 'auto');
-    ga('send', 'pageview');
-  </script>
 
   <!--[if lt IE 10 ]>
   <script>
@@ -105,14 +96,7 @@
   <script charset="utf-8" src="/bower_components/jquery-hammerjs/jquery.hammer.js"></script>
   <script charset="utf-8" src="/bower_components/velocity/velocity.js"></script>
 
-  <script charset="utf-8" src="/bower_components/d3/d3.js"></script>
-  <script charset="utf-8" src="/bower_components/c3/c3.js"></script>
-  <script charset="utf-8" src="/bower_components/c3-angular/c3js-directive.js"></script>
-
   <script charset="utf-8" src="/bower_components/lodash/dist/lodash.js"></script>
-  <script charset="utf-8" src="/bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
-  <script charset="utf-8" src="/bower_components/bower-jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-  <script charset="utf-8" src="/bower_components/bower-jvectormap/jquery-jvectormap-world-mill-en.js"></script>
 
   <script charset="utf-8" src="/bower_components/arrive/src/arrive.js"></script>
   <script charset="utf-8" src="/bower_components/select2/select2.js"></script>
@@ -144,34 +128,17 @@
   <script charset="utf-8" src="assets/js/directives/navbar-hover.js"></script>
   <script charset="utf-8" src="assets/js/directives/navbar-search.js"></script>
   <script charset="utf-8" src="assets/js/directives/noui-slider.js"></script>
-  <script charset="utf-8" src="assets/js/directives/todo-widget.js"></script>
   <script charset="utf-8" src="assets/js/directives/menu-link.js"></script>
   <script charset="utf-8" src="assets/js/directives/menu-toggle.js"></script>
-  <script charset="utf-8" src="assets/js/directives/vectormap.js"></script>
+
   <script charset="utf-8" src="assets/js/directives/autofocus.js"></script>
   <script charset="utf-8" src="assets/js/directives/card-flip.js"></script>
   <script charset="utf-8" src="assets/js/directives/scroll-spy.js"></script>
 
   <script charset="utf-8" src="assets/js/services/color-service.js"></script>
-  <script charset="utf-8" src="assets/js/services/todo-service.js"></script>
-
   <script charset="utf-8" src="assets/js/controllers/main.js"></script>
   <script charset="utf-8" src="assets/js/controllers/dashboard.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/charts.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/colors.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/lists.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/maps/full-map.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/maps/basic-map.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/maps/clickable-map.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/maps/searchable-map.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/maps/zoomable-map.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/maps/vector-map.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/forms.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/upload.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/tables/basic.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/tables/data.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/apps/crud.js"></script>
-  <script charset="utf-8" src="assets/js/controllers/apps/todo.js"></script>
+  <script charset="utf-8" src="assets/js/plugin.js"></script>
   <!-- endbuild -->
 </body>
 </html>
