--- a/app/index.html
+++ b/app/index.html
@@ -139,6 +139,8 @@
   <script charset="utf-8" src="assets/js/services/color-service.js"></script>
   <script charset="utf-8" src="assets/js/controllers/main.js"></script>
   <script charset="utf-8" src="assets/js/controllers/dashboard.js"></script>
+  <script charset="utf-8" src="assets/js/controllers/apps/crud.js"></script>
+
   <script charset="utf-8" src="assets/js/plugin.js"></script>
   <!-- endbuild -->
 </body>
